crates/parser/src/tests/snapshots/parser__tests__grammar__attrs_and_visibility.snap
---
source: crates/parser/src/tests/grammar.rs
description: "#[entry] pub app: (Int) -> Int = \\input. { #[cold] run; }; Point: type = { #[x] pub x: Int, pri y: Int };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(FunctionItem),
        Enter(Attr),
        Hash(1),
        Enter(AttrInner),
        OpenBrack(1),
        Enter(AttrItem),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Enter(Visibility),
        KwPub(1),
        Exit,
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(FnType),
        Enter(TupleType),
        OpenParen(1),
        Enter(TypeField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        ThinArrow(2),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(ClosureExpr),
        Backslash(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Dot(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(Attr),
        Hash(1),
        Enter(AttrInner),
        OpenBrack(1),
        Enter(AttrItem),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(RecordType),
        OpenBrace(1),
        Enter(TypeField),
        Enter(Attr),
        Hash(1),
        Enter(AttrInner),
        OpenBrack(1),
        Enter(AttrItem),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Enter(Visibility),
        KwPub(1),
        Exit,
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(TypeField),
        Enter(Visibility),
        KwPri(1),
        Exit,
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
