crates/parser/src/tests/snapshots/parser__tests__grammar__binding_item.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ let x: Int = 42; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(LetStmt),
        KwLet(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
