crates/parser/src/tests/snapshots/parser__tests__grammar__binding_pattern_struct.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ let { x: mut a, y } = { x: 1, y: 2 }; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(LetStmt),
        KwLet(1),
        Enter(RecordPat),
        OpenBrace(1),
        Enter(PatField),
        Ident(1),
        Colon(1),
        Enter(IdentPat),
        KwMut(1),
        Ident(1),
        Exit,
        Exit,
        Comma(1),
        Enter(PatField),
        Ident(1),
        Exit,
        CloseBrace(1),
        Exit,
        Eq(1),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Comma(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
