crates/parser/src/tests/snapshots/parser__tests__grammar__binding_patterns.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ let _: Int = 0; let mut x: Int = 1; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(LetStmt),
        KwLet(1),
        Enter(WildcardPat),
        Underscore(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        Enter(LetStmt),
        KwLet(1),
        Enter(IdentPat),
        KwMut(1),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
