crates/parser/src/tests/snapshots/parser__tests__grammar__binding_without_type.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ x := 42; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ShortLetStmt),
        Ident(1),
        ColonEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
