crates/parser/src/tests/snapshots/parser__tests__grammar__block_expr_disambiguation.snap
---
source: crates/parser/src/tests/grammar.rs
description: "x: = { { y: Int; }; { y: Int = 1; }; { y: = 1; }; { y += 1; } };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(BindingItem),
        Enter(Binding),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Colon(1),
        Eq(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(BindingItem),
        Enter(Binding),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(BindingItem),
        Enter(Binding),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(BindingItem),
        Enter(Binding),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Colon(1),
        Eq(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(AssignStmt),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        PlusEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
