crates/parser/src/tests/snapshots/parser__tests__grammar__block_statements_and_tail_expr.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ y := 1; y }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ShortLetStmt),
        Ident(1),
        ColonEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Semi(1),
        Exit,
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
