crates/parser/src/tests/snapshots/parser__tests__grammar__block_stmt_recovery_makes_progress.snap
---
source: crates/parser/src/tests/grammar.rs
description: "x: = { , };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(BindingItem),
        Enter(Binding),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Colon(1),
        Eq(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ErrorExpr),
        Error(0),
        Exit,
        Comma(1),
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Comma,
        },
    ],
}
