crates/parser/src/tests/snapshots/parser__tests__grammar__complex_types.snap
---
source: crates/parser/src/tests/grammar.rs
description: "F: type = (Int, &mut User) mut -> [*Int; 4];"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(TypeItem),
        Ident(1),
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(FnPtrType),
        Enter(TupleType),
        OpenParen(1),
        Enter(TupleField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(TupleField),
        Enter(RefType),
        Amp(1),
        KwMut(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        KwMut(1),
        ThinArrow(2),
        Enter(ArrayType),
        OpenBrack(1),
        Enter(PtrType),
        Star(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
